[package]
authors = ["Ryu Shinmura <rysestock@gmail.com>"]
edition = "2018"
name = "browser-cookie"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = {version = "0.9.2"}
base64 = "0.13.0"
crypt32-sys = "0.2.0"
directories = "3.0"
num = "0.1.42"
regex = "1.5.4"
rusqlite = {version = "0.15.0", features = ["bundled"]}
time = "0.2.27"
user32-sys = "0.2.0"
winapi = "0.2.8"
serde_json = "1.0.64"
thiserror = "1.0.26"
anyhow="1.0.42"
cookie = "0.15"
chrono = "0.4.19"
